fix: add link tag for favicon

--- a/Day06/index.html
+++ b/Day06/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Day 6 - Type Ahead 👀" />
     <meta name="author" content="Mohit" />
     <title>Type Ahead 👀 - Mohit</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="./script.js" defer></script>
   </head>
