fix: insecure mixed content issue

--- a/Day11/index.html
+++ b/Day11/index.html
@@ -13,7 +13,7 @@
     <div class="player">
       <video
         class="player__video viewer"
-        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+        src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
       ></video>
 
       <div class="player__controls">
